<resources>
    <string name="app_name">GowerExplorerApp3</string>
    <string name="title_map_home">PoI Map</string>
    <string name="title_poi_list">PoI List</string>
    <string name="title_dashboard">Itineraries</string>
    <string name="title_notifications">Profile</string>
    <string name="mile">mi</string>
    <string name="desc_whiteford_lighthouse">"It is an unusual cast-iron lighthouse built in 1865 to a design by John Bowen (1825–1873) of Llanelli, by the Llanelli Harbour and Burry Navigation Commissioners to mark the shoals of Whiteford Point, replacing an earlier piled structure of 1854, of which nothing remains. "</string>
    <string name="desc_port_eynon">Port Eynon Bay is a very popular beach resort beside the village of Port Eynon. Port Eynon Point is the most southerly point of the Gower Peninsula.</string>
    <string name="desc_rhossili">Rhossili Bay lies at the western end of the beautiful Gower peninsula. 3 miles of golden sands, iconic landscapes including Worms Head and Rhossili Down and history everywhere- from neolithic through to the more recent, including home to Edgar Evans.</string>
    <string name="desc_arthurs_stone">One of Wales’ most famous prehistoric monuments, the 25-ton capstone sits majestically on top of Cefyn Bryn Common</string>
    <string name="desc_caswell">"A lovely little bay with a gently sloping sand beach. Great for people of all ages and for all activities - surfing, paddle-boarding, making sand castles, and ... "</string>
    <string name="desc_three_cliffs">"Three Cliffs Bay beach offers a wilder experience. Picture a spectacular shoreline of sand dunes, salt marsh and limestone cliffs. "</string>
    <string name="desc_langland">Langland Bay is a popular coastal holiday resort in Gower, Swansea in south Wales. It is a popular surfing beach which regularly meets the European Blue Flag award for quality.</string>
    <string name="desc_oystermouth_castle">Oystermouth Castle is a Norman stone castle in Wales, overlooking Swansea Bay on the east side of the Gower Peninsula near the village of Mumbles.</string>
    <string name="thumbnail_image">thumbnail image</string>
    <string name="search">SEARCH</string>
    <string name="search_button">Search Button</string>
    <string name="filter_button">filter button</string>
    <string name="centre_map_to_my_location">centre map to my location</string>
    <string name="desc_gower_inn">A traditional country pub, located on the main road linking Gower and Swansea. Dog-friendly, and parking available.</string>
    <string name="title_activity_poi_view">PoiView</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="directions_unknown">Directions Unknown</string>
    <string name="navigate">Navigate</string>
    <string name="rated_5_star">Rated: ⭐⭐⭐⭐⭐</string>
    <string name="main_image">main image</string>
    <string name="check_in">Check In</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_guest_user">Hello, Guest User</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="incorrect_login_details">Incorrect Login Details.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="speak">Speak</string>
    <string name="write_your_review_here">Write Your Review Here:</string>
    <string name="post_review">Post Review (+5 Points)</string>
    <string name="no_reviews">No Reviews</string>
    <string name="review_title_hint">Review Title</string>
    <string name="_0_reviews_dummy">0 Reviews</string>
    <string name="create_a_new_poi">Create a New PoI</string>
    <string name="delete_poi">Delete Poi</string>
    <string name="edit_poi">Edit Poi</string>
    <string name="admin_only">Admin Only:</string>
    <string name="title">Title</string>
    <string name="image_url">Image URL</string>
    <string name="description">Description</string>
    <string name="directions">Directions</string>
    <string name="poi_latitude">PoI Latitude</string>
    <string name="poi_longitude">PoI Longitude</string>
    <string name="parking_latitude">Parking Latitude</string>
    <string name="parking_longitude">Parking Longitude</string>
    <string name="number_of_points">Number Of Points</string>
    <string name="discovery_range">Discovery Range</string>
    <string name="submit">Submit</string>
    <string name="id_of_poi_to_edit_or_delete">ID of PoI To Edit or Delete</string>
    <string name="poi_type">Poi Type</string>
    <string name="unexplored">Unexplored</string>
    <string name="explored">Explored</string>
    <string name="email_list_of_explored_pois">Email List of Explored PoIs</string>
    <string name="you_have">You have</string>
    <string name="points_end_sent">" points. "</string>
    <string name="leaderboard">Leaderboard:</string>
    <string-array name="poi_types">
        <item>Beach</item>
        <item>Nature</item>
        <item>Landmark</item>
        <item>Commerce</item>
        <item>Misc.</item>
    </string-array>
</resources>
