<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map_home">

    <fragment
        android:id="@+id/navigation_map_home"
        android:name="com.example.gowerexplorerapp3.ui.home.MapHome"
        android:label="@string/title_map_home"
        tools:layout="@layout/fragment_map_home" />
    <fragment
        android:id="@+id/itemFragment"
        android:name="com.example.gowerexplorerapp3.ui.home.ItemFragment"
        android:label="@string/title_poi_list"
        tools:layout="@layout/fragment_item_list" />
    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.gowerexplorerapp3.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.gowerexplorerapp3.ui.notifications.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />
</navigation>
